tests/NormalTests/paczka1/small_fuzzy/70063485.err
Error in line 8: FcHPN5 A726 111,6
Error in line 11: HvuCCT S314 42,8
Error in line 9: 5t4 A726 3,5
